<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dldc.chatvibrationsfortwitch.SettingsActivity">

    <TextView
        android:id="@+id/vibration_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/vibration_settings"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        tools:layout_editor_absoluteY="0dp" />

    <RadioGroup
        android:id="@+id/num_vibrations_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vibration_settings"
        tools:layout_editor_absoluteX="0dp">

        <RadioButton
            android:id="@+id/single_vibration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/single_vibration"
            app:layout_constraintLeft_toLeftOf="parent" />

        <RadioButton
            android:id="@+id/double_vibration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/double_vibration"
            app:layout_constraintLeft_toLeftOf="parent" />

        <RadioButton
            android:id="@+id/triple_vibration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/triple_vibration"
            app:layout_constraintLeft_toLeftOf="parent" />
    </RadioGroup>

    <TextView
        android:id="@+id/min_time_between_vibrations_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/min_time_between_vibrations"
        android:paddingLeft="20dp"
        android:paddingTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/num_vibrations_radio_group"
        />

    <EditText
        android:id="@+id/min_time_between_vibrations"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="0"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/min_time_between_vibrations_text" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_marginBottom="20dp"/>

</android.support.constraint.ConstraintLayout>
